# zopp

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  DEMO.md  DEVELOPMENT.md  OPERATOR_DESIGN.md  README.md  ROADMAP.md  TESTING.md  badge.json  cli.Dockerfile  coverage-baseline.txt  index.html  issue-46-email-verification.md  operator.Dockerfile  server.Dockerfile  session-ses_423c.md
.cargo/: audit.toml  (+1 more)
apps/e2e-tests/: Cargo.toml
apps/e2e-tests/tests/: audit.rs  cli_k8s_sync.rs  counts.rs  demo.rs  email_verification.rs  environments.rs  groups.rs  invites.rs  k8s.rs  keychain.rs  operator_sync.rs  principals.rs  projects.rs  rbac.rs  secrets.rs  self_signed_tls.rs  user_permissions.rs
apps/zopp-cli/: Cargo.toml
apps/zopp-cli/src/: cli.rs  client.rs  crypto.rs  grpc.rs  k8s.rs  main.rs  passphrase.rs
apps/zopp-cli/tests/: demo.rs  e2e.rs  k8s_sync.rs
apps/zopp-operator/: Cargo.toml  README.md
apps/zopp-operator/src/: controller.rs  crd.rs  credentials.rs  kek.rs  main.rs  reload.rs  sync.rs  watch.rs
apps/zopp-operator/tests/: operator.rs
apps/zopp-server/: Cargo.toml
apps/zopp-server/src/: backend.rs  config.rs  main.rs  metrics.rs  server.rs  tests.rs
apps/zopp-web/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
apps/zopp-web/src/: app.rs  lib.rs
apps/zopp-web/style/: input.css
apps/zopp-web/tests/: auth.spec.ts  invites.spec.ts  join-verification.spec.ts  permissions.spec.ts  secrets-e2e.spec.ts  settings.spec.ts  workspaces.spec.ts
crates/zopp-audit/: Cargo.toml
crates/zopp-audit/src/: lib.rs
crates/zopp-billing/: Cargo.toml
crates/zopp-billing/src/: lib.rs  webhook.rs
crates/zopp-config/: Cargo.toml
crates/zopp-config/src/: lib.rs
crates/zopp-crypto/: Cargo.toml
crates/zopp-crypto-wasm/: Cargo.toml
crates/zopp-crypto-wasm/src/: lib.rs
crates/zopp-crypto/src/: lib.rs
crates/zopp-crypto/tests/: compile_fail.rs
crates/zopp-events/: Cargo.toml
crates/zopp-events/src/: lib.rs
crates/zopp-proto-web/: Cargo.toml  build.rs
crates/zopp-proto-web/src/: lib.rs
crates/zopp-storage/: Cargo.toml
crates/zopp-storage/src/: lib.rs  store.rs
crates/zopp-store-postgres/: Cargo.toml
crates/zopp-store-postgres/.sqlx/: query-0323e3b378f1c3c3922259d60e7191b813614b2317e1cda0bf7e2e472a56b056.json  query-08a20072e1d83847bb7073f622afadac4168b078c5f979d06c70d649ec8a4dde.json  query-093637b0b969a963156cf44232f7737d9d924f44b35e2b35bf46a014b18fa63b.json  query-0a6807677cf3fabc8eda45884fa64ef661dad9c8649ad968d2cc9745d4acd829.json  query-0a70f4e4d4dc89c146e3d49ec78004f87e84b3f90fa292f2a30b8f9fcc36f129.json  query-0fc3859c236ee82c7e6b5cc477422884e9e8c65da042d8f78a9893c11faa71d2.json  query-11c825a3adb0868188f193850eb0d10fcdeb30e1bf96e6e8a1d014d973af0ebf.json  query-19e55842980cd16fb641b3b055359dc78fc0a5e8b17d87eb1e06dc5346abc6a8.json  query-1ced6c2edad50a0b9049769b0d9063e2a923a58ef60245684807c79ea0331d52.json  query-1e2766610834ec088bc97885cafed1157ca048f2eb59a20ff99321bc42a11214.json  query-1e81dfa973d6118a99e4595f6d722360cc9d11137e4ee95d25119a2ea36c9ba0.json  query-234c33a42f7ccb5fa04bee7ea5629a047a70d9d30c36074327c430d078f43499.json  query-26e34b81fa6ac5261361abc14d9dba89a8f2274d2d5611387afd2c7ee77e01ef.json  query-288c6638a18c25f17a4a43bcb838f1e02c46bb6bb6205bcab15fb4101869d839.json  query-2a3d321f408eeb4f8ca4afe27c04f1f88723398f9b0dc527f70c1e87bac9d155.json  query-2ce0289e3ec6426a8cf3452ca170c888211929ac00b462a0918404ba2a88e5af.json  query-2dbbe181a67af9408456fae3da6581dcf7b02e9f911837df9704cbc15dce4095.json  query-3071ad0356f61eceb1e42e64a320189b8595dd6444b29bfce135ac0e1d24c0e3.json  query-37eb67948a676ba5281deece50ff5ffda8ffdf9c0e537ff57baa82fd579eda5f.json  query-3d9cbc31e075891029647633f2de4ff4e86dc5423bf839b05353caf181d9bccd.json  query-3e4f8db42e820146a3d2794838165ad1f2270257b2a94964877b7eb301f42f56.json  query-3f0a2c112c42422ddcc0a6cbcfcb164cf1c759640540c75c83e2557799bec3ad.json  query-46c6da2c72170d08243891b001479239723a82beeba1078e1134de8ba1fea18c.json  query-48006c0df77c817a62bb009e804454a9d175b03062ba69652f292e895f6bbe9a.json  query-48df595a5dae55478d32b8f334b850fdbfaf034b259291253107b82d1b56b491.json  query-48f2c252b9a75b01c30858bf099a0962ae834ba83dd6300e974ddd87d1b82b6c.json  query-4b0a932534880ed8149f6163d8abb2d118332df48717d19d4f1feeb82f782c1c.json  query-4bff39b50909128a9c9cb069a30509964e6b440221c39ace83c5aaed8b0bd10d.json  query-4e82b0d6f3a330f45b287c4be36e31d7067516df92e30e6f4899cbbb863f7433.json  query-4ed1f63d30d7a812224d49f5db2d3068bf65761764c9429d4d923ace5850a91a.json  query-504685b6f19c3dc87aae9adc04f6227f3de7a25595e5a00235c9654896631058.json  query-53d2f222b4f08e66b88ada47220e03a7d5ed6a167c439037c993f63d40f9a51a.json  query-544f360cf9e89ba532bd4891644edc33460362192a43ba21cac576f25c7db1f4.json  query-579b59f0642fcbb1438d8364ac13c7a9ee928fe196ee417e53b79b3348c7e220.json  query-5a7cd122954d8ff15bf21d91e263291be608eff2e3d8c2928a09cbf03cb20d09.json  query-5bba3a91287006d65af3ffa875532984c37b16fee891de4a6188dbbdf090ee80.json  query-5d3f3262271112bf7c32cce870a7d91ab0f410c09c1e8235a77e2a5992a37610.json  query-665591f178d1215811de911224a521d8896f3634e9f022e8f3d14e98793dffe5.json  query-6af6e060d866a9d6a1981a0438db1d02e0cbedf3079e409961d3b4b469f16020.json  query-738ec493069918d00302339f499a8963ea4f604e94e0d873c55848dd276a4243.json  (+47 more)
crates/zopp-store-postgres/migrations/: 20260105000001_add_rbac.sql  20260105000002_add_groups.sql  20260105000003_add_user_permissions.sql  20260110000001_add_audit_logs.sql  20260114000001_add_self_invites.sql  20260115000001_add_principal_exports.sql  20260116000001_add_export_code.sql  20260116000002_add_verification_salt.sql  20260125000001_add_email_verification.sql  20260126000001_add_organizations.sql  20260126000002_add_billing.sql
crates/zopp-store-postgres/src/: lib.rs  tests.rs
crates/zopp-store-sqlite/: Cargo.toml  README.md
crates/zopp-store-sqlite/.sqlx/: query-02e252cbe927d2b3b350c28286f81f72faee8cb0c7d10c28d31880d2290daa43.json  query-0346849b3a60c765988545d66c967769c18cb8e99a29bb86529200b2214aba08.json  (+113 more)
(+592 files in other folders)
