[workspace]
members = [
    "apps/zopp-cli",
    "apps/zopp-operator",
    "apps/zopp-server",
    "crates/zopp-config",
    "crates/zopp-crypto",
    "crates/zopp-events",
    "crates/zopp-events-memory",
    "crates/zopp-proto",
    "crates/zopp-storage",
    "crates/zopp-store-sqlite",
    "xtask",
]

resolver = "2"

[workspace.package]
rust-version = "1.65"

[workspace.dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.2", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4.3"
hostname = "0.4.1"
prost = "0.14"
rand = "0.9.2"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sqlx = "0.8.6"
toml = "0.8"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.2", features = ["derive"] }
sha2 = "0.10"
kube = { version = "2.0.1", features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
base64 = "0.22.1"
