[workspace]
members = [
    "apps/e2e-tests",
    "apps/zopp-cli",
    "apps/zopp-operator",
    "apps/zopp-server",
    "crates/zopp-config",
    "crates/zopp-crypto",
    "crates/zopp-events",
    "crates/zopp-events-memory",
    "crates/zopp-proto",
    "crates/zopp-secrets",
    "crates/zopp-storage",
    "crates/zopp-store-postgres",
    "crates/zopp-store-sqlite",
    "xtask",
]

resolver = "2"

[workspace.package]
rust-version = "1.90"

[workspace.dependencies]
async-trait = "0.1.89"
argon2 = "0.5.3"
axum = "0.8"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.2", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
dirs = "6.0.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hex = "0.4.3"
hostname = "0.4.1"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "2.0.1", features = ["client", "rustls-tls"] }
prost = "0.14"
rand = "0.9.2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = "0.8.6"
tempfile = "3.14"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
trybuild = "1"
url = "2.5"
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.2", features = ["derive"] }
