[workspace]
members = [
    "apps/e2e-tests",
    "apps/zopp-cli",
    "apps/zopp-operator",
    "apps/zopp-server",
    "apps/zopp-web",
    "crates/zopp-audit",
    "crates/zopp-billing",
    "crates/zopp-config",
    "crates/zopp-crypto",
    "crates/zopp-crypto-wasm",
    "crates/zopp-events",
    "crates/zopp-events-memory",
    "crates/zopp-events-postgres",
    "crates/zopp-proto",
    "crates/zopp-proto-web",
    "crates/zopp-secrets",
    "crates/zopp-storage",
    "crates/zopp-store-postgres",
    "crates/zopp-store-sqlite",
    "xtask",
]

resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.90"
license = "AGPL-3.0"
repository = "https://github.com/faiscadev/zopp"
homepage = "https://github.com/faiscadev/zopp"
keywords = ["secrets", "encryption", "zero-knowledge", "kubernetes"]
categories = ["cryptography", "command-line-utilities"]

[workspace.dependencies]
async-trait = "0.1.89"
argon2 = "0.5.3"
axum = "0.8"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.2", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6.1"
dirs = "6.0.0"
dotenvy = "0.15"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures = "0.3"
hex = "0.4.3"
hostname = "0.4.1"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
keyring = { version = "3", default-features = false }
kube = { version = "2.0.1", features = ["client", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mockall = "0.13"
prost = "0.14"
rand = "0.9.2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = "0.12"
resend-rs = "0.20"
rpassword = "7"
schemars = "1"
serial_test = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = "0.8.6"
subtle = "2.6"
tempfile = "3.14"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
trybuild = "1"
url = "2.5"
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.2", features = ["derive"] }

# WASM dependencies
getrandom = { version = "0.2", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "DomStringList",
    "IdbFactory",
    "IdbDatabase",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbKeyRange",
    "IdbCursorWithValue",
    "IdbVersionChangeEvent",
    "Storage",
    "Location",
    "Event",
    "EventTarget",
    "console",
    "Navigator",
    "Clipboard",
] }
serde-wasm-bindgen = "0.6"
gloo-utils = "0.2"

# Leptos dependencies
leptos = "0.7"
leptos_router = "0.7"
leptos_axum = "0.7"
leptos_meta = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
http = "1.2"

# gRPC-web
tonic-web = "0.14"
