[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }

# For Kubernetes tests
kube = { workspace = true }
k8s-openapi = { workspace = true }

# For graceful shutdown (coverage collection)
nix = { version = "0.29", features = ["signal"] }

# For backend_test! macro name generation
paste = "1.0"

# For email parsing in tests
regex = "1"

# For rustls crypto provider initialization
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[[test]]
name = "demo"
path = "tests/demo.rs"

[[test]]
name = "k8s"
path = "tests/k8s.rs"
harness = false

[[test]]
name = "rbac"
path = "tests/rbac.rs"

[[test]]
name = "environments"
path = "tests/environments.rs"

[[test]]
name = "projects"
path = "tests/projects.rs"

[[test]]
name = "invites"
path = "tests/invites.rs"

[[test]]
name = "groups"
path = "tests/groups.rs"

[[test]]
name = "user_permissions"
path = "tests/user_permissions.rs"

[[test]]
name = "principals"
path = "tests/principals.rs"

[[test]]
name = "counts"
path = "tests/counts.rs"

[[test]]
name = "secrets"
path = "tests/secrets.rs"

[[test]]
name = "email_verification"
path = "tests/email_verification.rs"
