[package]
name = "zopp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for zopp secrets manager"

[[bin]]
name = "zopp"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
zopp-proto = { path = "../../crates/zopp-proto", version = "0.1.0" }
zopp-crypto = { path = "../../crates/zopp-crypto", version = "0.1.0" }
zopp-secrets = { path = "../../crates/zopp-secrets", version = "0.1.0" }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
hostname = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls"] }
