[package]
name = "zopp-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Kubernetes operator for zopp secrets manager"

[[bin]]
name = "zopp-operator"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "fs"] }
kube = { workspace = true, features = ["runtime", "derive"] }
schemars = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
zopp-proto = { path = "../../crates/zopp-proto", version = "0.1.0" }
zopp-crypto = { path = "../../crates/zopp-crypto", version = "0.1.0" }
zopp-secrets = { path = "../../crates/zopp-secrets", version = "0.1.0" }
zopp-config = { path = "../../crates/zopp-config", version = "0.1.0" }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
zopp-config = { path = "../../crates/zopp-config", version = "0.1.0" }
reqwest = { workspace = true }
serial_test = { workspace = true }
