[package]
name = "zopp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
prost = { workspace = true }
futures = "0.3"
zopp-proto = { path = "../../crates/zopp-proto" }
zopp-storage = { path = "../../crates/zopp-storage" }
zopp-store-postgres = { path = "../../crates/zopp-store-postgres" }
zopp-store-sqlite = { path = "../../crates/zopp-store-sqlite" }
zopp-crypto = { path = "../../crates/zopp-crypto" }
zopp-events = { path = "../../crates/zopp-events" }
zopp-events-memory = { path = "../../crates/zopp-events-memory" }
uuid = { workspace = true }
thiserror = { workspace = true }
rand_core = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
reqwest = "0.12"
