[package]
name = "zopp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC server for zopp secrets manager"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
zopp-audit = { path = "../../crates/zopp-audit", version = "0.1.1" }
zopp-proto = { path = "../../crates/zopp-proto", version = "0.1.0" }
zopp-storage = { path = "../../crates/zopp-storage", version = "0.1.0" }
zopp-store-postgres = { path = "../../crates/zopp-store-postgres", version = "0.1.0" }
zopp-store-sqlite = { path = "../../crates/zopp-store-sqlite", version = "0.1.0" }
zopp-crypto = { path = "../../crates/zopp-crypto", version = "0.1.0" }
zopp-events = { path = "../../crates/zopp-events", version = "0.1.0" }
zopp-events-memory = { path = "../../crates/zopp-events-memory", version = "0.1.0" }
zopp-events-postgres = { path = "../../crates/zopp-events-postgres", version = "0.1.0" }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
rand_core = { workspace = true }
x25519-dalek = { workspace = true }
