[package]
name = "zopp-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
stripe = ["dep:async-stripe"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stripe = { version = "1.0.0-rc.0", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Internal crates
zopp-storage = { path = "../zopp-storage" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
