[package]
name = "zopp-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
trybuild = "1"
