[package]
name = "zopp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zero-knowledge cryptographic primitives for zopp secrets manager"

[features]
default = []
wasm = ["getrandom/js", "wasm-bindgen", "js-sys"]

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

# Optional WASM dependencies
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
trybuild = { workspace = true }
