[package]
name = "zopp-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Event bus abstraction for zopp"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zopp-storage = { path = "../zopp-storage", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
