[package]
name = "zopp-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Storage abstraction layer for zopp secrets manager"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
mockall = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
default = []
test-support = ["mockall"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
