[package]
name = "zopp-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PostgreSQL storage backend for zopp secrets manager"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros", "chrono", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zopp-audit = { path = "../../crates/zopp-audit", version = "0.1.1" }
zopp-storage = { path = "../../crates/zopp-storage", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
sha2 = { workspace = true }
